# OTLMOW-Model

./: .gitignore  README.md  Readme.ipynb  commands.txt  list_classes_to_copy.txt  otlmow_model.py  pyproject.toml  requirements.txt  requirements_update.txt
.github/workflows/: README.md  auto_update.yml  coverage.yml  main.yml  release.yml  unittest.yml  zip_source.yml
SampleCode/: clearing_values.py  get_all_concrete_classes_from_abstract.py  print_enumerations.py  printing_instances.py
UnitTests/: .coverage  .gitignore  run_all_tests.py  run_all_tests_html.py  run_single_testfile_html.py  test_coverage.sh
UnitTests/GATests/: WKTPlusGeoTypeTests.py  test_WKTPlusGeoType.py
UnitTests/GeneralTests/: AbstractBehaviourTests.py  AbstractBehaviour_test.py  AttributeInfoTests.py  DeprecatedTests.py  Deprecated_test.py  DictDecoder_test.py  DotnotatieOnAttributeTests.py  DotnotationHelperTests.py  GenericHelperTests.py  GenericHelper_test.py  InstantiationTests.py  Instantiation_import_all_test.py  Instantiation_test.py  MetaInfoTests.py  MetaInfo_test.py  OTLObjectHelper_test.py  OTLObjectTests.py  OTLObject_dict_test.py  OTLObject_test.py  RelationCreatorTests.py  RelationCreator_test.py  RelationValidatorTests.py  RelationValidator_test.py  StringHelperTests.py  WaardenObject_test.py  test_Instantiation.py
UnitTests/ModelUpdater/: ModelUpdater_test.py
UnitTests/OTLAttribuutTests/: ComplexDataTypeFieldTests.py  ComplexDataTypeField_test.py  DateFieldAttribute_test.py  FloatOrDecimalAttributeTests.py  FloatOrDecimalAttribute_test.py  KardinaliteitGeneralTests.py  KardinaliteitGeneral_test.py  KeuzelijstFieldTests.py  KeuzelijstField_test.py  KwantWrdFieldTests.py  KwantWrdField_test.py  OTLAttribuutDummyTests.py  OTLAttribuutDummy_test.py  OTLAttribuutGeneric_test.py  StringAttribute_test.py  URIAttributeTests.py  URIAttribute_test.py  UnionTypeAttribute_test.py
UnitTests/OTLFieldTests/: BooleanField_test.py  DateFieldTests.py  DateField_test.py  DateTimeFieldTests.py  DateTimeField_test.py  FloatOrDecimalField_test.py  IntegerField_test.py  NonNegIntegerField_test.py  StringFieldTests.py  StringField_test.py  TimeFieldTests.py  TimeField_test.py  URIFieldTests.py  URIField_test.py  WKTField_test.py  WKTValidatorTests.py  WKTValidator_test.py
UnitTests/htmlcov/: __init___py.html  class_index.html  d_04375c32baa849db_AIMDBStatus_py.html  d_04375c32baa849db_AIMObject_py.html  d_04375c32baa849db_AIMToestand_py.html  d_04375c32baa849db_DirectioneleRelatie_py.html  d_04375c32baa849db_NietDirectioneleRelatie_py.html  d_04375c32baa849db_RelatieObject_py.html  d_0cea012db28e37ec_AIDModule_py.html  d_0cea012db28e37ec_ANPRCamera_py.html  d_0cea012db28e37ec_Aandrijfas_py.html  d_0cea012db28e37ec_Aansluitmof_py.html  d_0cea012db28e37ec_Aansluitopening_py.html  d_0cea012db28e37ec_Aanstraalverlichting_py.html  d_0cea012db28e37ec_AanvullendeGeometrie_py.html  d_0cea012db28e37ec_Aardingskabel_py.html  d_0cea012db28e37ec_Aardingslus_py.html  d_0cea012db28e37ec_Aardingsonderbreker_py.html  d_0cea012db28e37ec_Aardingspen_py.html  d_0cea012db28e37ec_AfdekplaatBuispaal_py.html  d_0cea012db28e37ec_Afdichting_py.html  d_0cea012db28e37ec_Afmetingsensor_py.html  d_0cea012db28e37ec_Afscherming_py.html  d_0cea012db28e37ec_Afsluiter_py.html  d_0cea012db28e37ec_Afsluiting_py.html  d_0cea012db28e37ec_Afsluitkraan_py.html  d_0cea012db28e37ec_Aftakking_py.html  d_0cea012db28e37ec_AlarmModule_py.html  d_0cea012db28e37ec_AnalogeHoppinzuil_py.html  d_0cea012db28e37ec_Antenne_py.html  d_0cea012db28e37ec_Antennecoupler_py.html  d_0cea012db28e37ec_AntiParkeerpaal_py.html  d_0cea012db28e37ec_Armatuurcontroller_py.html  d_0cea012db28e37ec_Aswegerput_py.html  d_0cea012db28e37ec_Audioversterker_py.html  d_0cea012db28e37ec_AutomatischeOmschakelaar_py.html  d_0cea012db28e37ec_Badgelezer_py.html  d_0cea012db28e37ec_Baret_py.html  d_0cea012db28e37ec_Batterij_py.html  d_0cea012db28e37ec_Batterijlader_py.html  (+6500 more)
model_update/: ModelUpdater.py  automatic_update.py  model_update_status.txt
model_update_history/: 2.9.1.1.json  2.9.2.1.json  2.9.3.0.json  2.9.4.0.json  2.9.5.0.json
otlmow_model/: version_info.json
(+4484 files in other folders)
